# android_vulkandemo

./: README.md  build.gradle  gradle.properties  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: vulkandemo.cpp  vulkandemo_jni.cpp
app/src/main/cpp/utils/: CMakeLists.txt  util.cpp  util.hpp  util_init.cpp  util_init.hpp
app/src/main/cpp/vulkan_wrapper/: vulkan_wrapper.h
app/src/main/java/com/vulkan/demo/: MainActivity.java  VulkanDemo.java
app/src/main/res/layout/: activity_main.xml
